welcome.lessons.welcome.bdr.BDR2.scala.code
while fini=false
litMessage() match {
	case"R" => droite(); avance()
}
